# CppProjectTemplate

./: .clang-format  .editorconfig  CMakeLists.txt  build_linux.sh  build_windows.bat  conanfile.txt
include/: project.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
